# scikit-fuzzy

./: .travis.yml  setup.cfg  tox.ini
docs/: Makefile
docs/ext/: docscrape.py  numpydoc.py  plot2rst.py
docs/source/: conf.py  index.txt
docs/tools/: build_modref_templates.py  plot_pr.py
skfuzzy/control/: controlsystem.py  exceptions.py  fuzzyvariable.py  rule.py  visualization.py
skfuzzy/control/tests/: test_controlsystem.py
skfuzzy/defuzzify/: exceptions.py
skfuzzy/filters/tests/: test_fire.py
skfuzzy/fuzzymath/: fuzzy_ops.py
skfuzzy/fuzzymath/tests/: test_fuzzy_ops.py
skfuzzy/image/tests/: test_imops.py  test_pad.py
