[flake8]
exclude = .cache,.git,.tox,./*/_/frameworks/,__pycache__,build,dist,docs

[metadata]
description-file = README.md

[tool:pytest]
addopts = -s --color=yes --failed-first --maxfail=1 --strict
filterwarnings =
    ignore::_pytest.warning_types.PytestUnknownMarkWarning
junit_family = xunit1
norecursedirs = .mypy_cache
python_files = test_*.py

[pytest-watch]
ext = .csv,.jinja2,.json,.py,.yaml,.yml
